[package]
name = "cnminer"
version = "0.1.0"
authors = ["SplittyDev <splittydev@gmail.com>"]

[dependencies]
blake = "2.0.1"
jh-ffi = "0.5.0"
skein-ffi = "0.5.0"
groestl = "0.9.0"
rayon = "1.5.0"
json = "0.12.4"
clap = "2.33.3"
libc = "0.2.93"

[dev-dependencies]
bencher = "0.1.5"
rand = "^0.8.3"

[[bench]]
name = "cryptonight"
harness = false